# infera

./: .gitignore  CMakeLists.txt  README.md  environment.yml  hello.cpp  install_deps.py
.github/workflows/: notify.yml
cmake/: onnxruntimeConfig.cmake
cxx/bindings/python/: CMakeLists.txt  Manifest.in  main.cpp  pyproject.toml  setup.py
cxx/bindings/python/cmake/: onnxruntimeConfig.cmake
cxx/core/: model.cpp  modelManager.cpp  serviceManager.cpp
cxx/include/: core.h  serviceManager.h
cxx/tests/python/: modelTest.py
examples/: CMakeLists.txt  managerServiceTest.cpp  managerTest.cpp  modelTest.cpp
include/: common.h
script/: wb-test.cpp
scripts/: wb-test.cpp  yolov7-test.cpp
src/: ORTManager.cpp  ORTManager.h  ORTManagerService.cpp  ORTManagerService.h  ORTSession.cpp  ORTSession.h  ORTSessionInterface.h  main.cpp
src/utils/: image.cpp  image.hpp
tests/: hello.cpp
tools/: env.yml  install_deps.py
